<resources>
    <string name="app_name">Buy</string>
    <string name="indxe">首页</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>

    <string name="regist">注册</string>
    <string name="login">登录</string>

    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>

    <string name="submit">提交</string>

    <string name="fromLocal">从相册选择</string>
    <string name="fromCamera">拍照</string>
    <string name="cancel">取消</string>

    <string name="mis_permission_rationale_write_storage">没有权限</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">請開始説話</string>
    <string name="pref_key_translate">translate</string>

    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">59841c04</string>

    <string
        name="tts_toast_format"
        formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>

    <string-array name="stream_values">
    <item>0</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>

</resources>
