<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/home_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="ab"
        ></android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/orange_line"></View>

    <RadioGroup
        android:id="@+id/home_rg"
        style="@style/home_navi_radiogroup"
        >
        <RadioButton
            android:id="@+id/home_rb_index"
            style="@style/home_navi_radiobutton"
            android:text="@string/indxe"

            />
        <RadioButton
            android:id="@+id/home_rb_category"
            style="@style/home_navi_radiobutton"
            android:text="@string/category"
            />
        <RadioButton
            android:id="@+id/home_rb_cart"
            style="@style/home_navi_radiobutton"
            android:text="@string/cart"
            />

        <RadioButton
            android:id="@+id/home_rb_mine"
            style="@style/home_navi_radiobutton"
            android:text="@string/mine"
            />
    </RadioGroup>
</LinearLayout>